Spring Native support (#379)
* Try to produce a native image
* Updated to Spring Boot 2.5.1 and Spring Native 0.10.1-SNAPSHOT
* Remove occurences of proxyBeanMethods=false from @Configuration and @SpringBootApplication annotations
* Need to exclude InventoryReportAggregator fom classpath when producing native image, otherwise fail to disambiguate mainClass.
* Revert to default logging provider for Spring Boot apps - Logback
* Note that there is still an open issue to allow for XML-based configuration, https://github.com/spring-projects-experimental/spring-native/issues/625
* Hide Log4j2 support behind a Maven profile
* Remove configuration-processor and context-indexer dependencies
* Remove redundant exclusion from sendgrid-java
* Update cloudfoundry dependencies to 5.5.0.RELEASE
* Set spring-native.version as property
* Update documentation
  * Fix broken links
* Upgrade OpenJDK JRE used in Dockerfile to 11.0.11
dates
* Add Spring Snapshot repositories
* Update Github Actions to produce variant executable artifacts for each of the supported backends (Log4J2 is configured as logging provider in each case)
* Fix startup issues by setting spring.sql.init.enabled to false
  * Update R2dbcConfig so that connectionFactory is correctly initialized for all runtime variants (e.g., local, Docker, and cf push)
* manifest.yml updated to pickup artifact from target directory
* Be explicit - clean before invoking mvn verify in ci and release yaml (Github Actions)
  * Make certain final artifacts do not include resources or impl from a prior build variant